// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Date renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw liArUm"
      disabled={true}
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          disabled={true}
          placeholder=" "
          type="date"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ bBBlgz"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ ccmqJI"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ esZogK"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW cQbMKi"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder=" "
          readOnly={true}
          type="date"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ bBvaBb"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ hBcOJM"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ ixHkqG"
          dir="rtl"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-imdKTc dWOyyj"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <input
        className="sc-kvmHFZ ljisNp"
        placeholder="medium"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <input
        className="sc-kvmHFZ cUAMDG"
        placeholder="large"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE dIdpZs"
      >
        <input
          className="sc-kvmHFZ dxsTVJ"
          placeholder="xlarge"
          type="date"
        />
        <label
          className="sc-imdKTc hgJXpw"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        medium
      </label>
      <input
        className="sc-kvmHFZ kvrIuy"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <label
        className="sc-lqGhv fjZBYZ"
      >
        large
      </label>
      <input
        className="sc-kvmHFZ eCQCpR"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-gfHhlw hxDhJE"
    >
      <div
        className="sc-hBdhWE ktmlgL"
      >
        <input
          className="sc-kvmHFZ htHiPs"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-imdKTc hgJXpw"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-iGCPWW ibcyuW"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
